﻿The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

* display Frequently Read list when no document is open
* support clickable links and a Table of Content for XPS documents

1.5 (2011-04-??)

* add support for displaying XPS documents
* add support for displaying CBZ and CBR comic books
* add "Save Shortcut" to create shortcuts to specific places in a document
* add a basic context menu for copying text, link addresses and comments
  (and saving and printing for the browser plugin)
* add folder browsing (Ctrl+Shift+Right opens the next PDF document in the
  current folder, Ctrl+Shift+Left the previous one)

1.4 (2011-03-12)

* browser plugin for Mozilla Firefox, Google Chrome and Opera for displaying
  PDF documents with SumatraPDF inside the browser (does NOT work under MSIE)
* IFilter for PDF to support searching document contents with
  Windows Desktop Search (full text search from Windows Vista/7's Start Menu)
* add support for AES-256 encrypted documents
* Right Mouse now drags the document (same as Shift+Left),
  Right+Scroll zooms it (same as Ctrl+Scroll)
* add menu item to open with Foxit Reader and PDF-XChange Viewer (if installed)
* add suport for custom installation directories in the installer
* removed -title cmd-line option
* we no longer compress binaries that come with installer with mpress to
  avoid anti-virus programs flagging us as a virus. The portable, .zip version
  is still compressed with mpress
* fixed an integer overflow reported by Jeroen van der Gun

1.3 (2011-02-04):

* improved text selection and copying. We now mimic the way a browser
  or Adobe Reader works: just select text with mouse and use Ctrl-C
  to copy it to a clipboard
* Shift+Left Mouse now scrolls the document, Ctrl+Left mouse still
  creates a rectangular selection (for copying images)
* 'c' shortcut toggles continuous mode