@@ -5,6 +5,7 @@ Next version:
 
 * display Frequently Read list when no document is open
 * support clickable links and a Table of Content for XPS documents
+* display printing progress and allow to cancel it
 
 1.5 (2011-04-??)
 
